<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:visibility="gone"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo"/>

    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_tabs"
        android:layout_below="@id/toolbar">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- WebView -->
            <WebView
                android:id="@+id/webview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/notification_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@android:color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/notification_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/notification_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/bottom_tabs"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/tab_home"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/home"
            android:text="@string/tab_label_home"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/tab_text_size"/>

        <Button
            android:id="@+id/tab_pricing"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/pricing"
            android:text="@string/tab_label_pricing"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/tab_text_size"/>

        <Button
            android:id="@+id/tab_login"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/login"
            android:text="@string/tab_label_login"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/tab_text_size"/>

        <Button
            android:id="@+id/tab_docs"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/docs"
            android:text="@string/tab_label_docs"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/tab_text_size"/>

        <Button
            android:id="@+id/tab_faq"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/faq"
            android:text="@string/tab_label_faq"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/tab_text_size"/>

    </LinearLayout>

</RelativeLayout>
